--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,19 @@
+TODO:
+- company index (the same as master company, but can't insert new) (DONE!)
+
+- employee index (the same as master employee, but can't insert new)
+- company detail (company id, name, list of employees)
+- employee detail page (employee id, company, active, location, list of items held)
+
+- start working on assembled_items
+- make sure get_max_id work as intended!
+- then add mutate function for items and assembled_items
+- add delete item / assembled item function (also delete all mutation history records)
+- modify insert item to add mutation history (first item assignment)
+
+- anchor every item to item detail, employee to employee detail, company to company detail
+==========
+
 0. Pikirkan mengenai operating system, bagaimana seharusnya?
 1. Pastikan mengenai employee punya current location, mungkin ke depannya tambahkan history mutasi employee.
 
