--- a/todo.txt
+++ b/todo.txt
@@ -12,24 +12,29 @@ TODO:
 - make sure get_max_id work as intended! (DONE!)
 - modify insert assembled item to add mutation history (DONE!)
 
-- update assembled item
-- remove component assembled item
-- add component to an assembled item
-- assemble a new item from existing items
+- update assembled item (DONE!)
+- remove component assembled item (DONE!)
+- add component to an assembled item (DONE!)
+- assemble a new item from existing items (DONE!)
+- then add mutate function for assembled_items (DONE!) (all the items inside of it are mutated as well)
+- modify mutation history page to show assembled items as well (DONE!)
+- modify mutation history page to show only item with part_of = 0 (DONE!)
+- modify employee items held to show assembled item as well, and only item with part_of = 0 (DONE!)
+- modify item page to show only item with part_of = 0 (DONE!)
+- modify assembled item to show all assembled items (DONE!)
 
-- start working on assembled_items
-- then add mutate function for assembled_items
-- modify mutation history page to show only item with part_of = 0
-- modify mutation history page to show assembled items as well
-- modify item page to show only item with part_of = 0
-- modify assembled item to show all assembled items
-- add delete item / assembled item function (also delete all mutation history records)
+- add delete item (also delete all mutation history records)
+  - test if assembled item still works well after its contained item is deleted
+  - test if mutation history are correctly deleted
+
+- add delete assembled item (delete all mutation history record, as well as all the item inside of it)
+- do a full web-app test, try to find any errors that might exist
 
 - create help page that tells about
   - item_type-brand-model design
   - mutation between employee concept, NOT location concept
 
-- ANCHORING: anchor every item_code to item detail, employee to employee detail, company to company detail
+- ANCHORING: anchor every item_code to item detail, employee to employee detail, company to company detail (Probably done)
 
 - REPORTING: utilize column selector and datatable print feature
 - dashboard with statistics as admin homepage
